# Core-commerce-coupon

./: .env.example  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
alembic/: env.py
alembic/versions/: 1851c11d35cc_add_limit_per_customer_field.py  2bee96734b46_coupon_id_to_uuid.py  2d6631599944_add_budget_column.py  48be2ed35f86_max_amount_and_min_puchase_to_numeric.py  490c5b0b9fb4_.py  552f5a721669_create_usage_history.py  5e4189a5cea9_merge_48be2ed35f86_with_2d6631599944.py  76ee3ff01655_update_coupon_database.py  774361e3f202_check_duplicate_index.py  800d4c0cf00d_update_usage_history_contraints.py  8f91ea50599f_create_coupon_model.py  9e2b73ec0b81_change_coupon_value_to_numeric.py  aee9e0aff067_merge_d1088b9cba5f_2d6631599944.py  be2c56dbfe85_create_task_model.py  d1088b9cba5f_remove_usage_inpuns_coupon.py  d1100715c10d_max_usage_is_nullable.py
app/: __init__.py  __main__.py  application.py  enums.py  lifetime.py  settings.py  telemetry.py
app/api/: router.py
app/api/coupon/: __init__.py  router.py  validators.py
app/api/coupon/v1/: router.py  schema.py  views.py
app/api/coupon/v2/: router.py  schema.py  views.py
app/api/docs/: views.py
app/api/healthcheck/: views.py
app/api/healthcheck/checkers/: database.py  rabbitmq.py
app/api/helpers/: __init__.py  authenticator.py  exception.py  handler.py  logging.py  middlewares.py
app/db/: base.py  dependencies.py
app/models/: __init__.py  coupon.py  task.py
app/repository/: base.py  coupon.py  task.py  usage_history.py
app/services/: coupon.py  handlers.py  storage.py  usage_history.py
app/services/utils/: calculate_discount.py  task_manager.py
kubernetes/base/: deployment.yaml  kustomization.yaml  service.yaml
kubernetes/development/: autoscale.yaml  cpu_ram_count.yaml  datadog.yaml  envs.yaml  ingress.yaml  job.yaml  kustomization.yaml  postgresql.yaml  replica_count.yaml
kubernetes/production/: autoscale.yaml  datadog.yaml  envs.yaml  ingress.yaml  pgpool.yaml  replica_count.yaml
kubernetes/staging/: autoscale.yaml  cpu_ram_count.yaml  datadog.yaml  ingress.yaml  job.yaml  kustomization.yaml  pgpool.yaml
tests/: conftest.py
tests/integration/: test_activation_coupon_route.py  test_bulk_create_coupon.py  test_create_coupon_route.py  test_delete_coupon_route.py  test_get_coupon_route.py  test_update_coupon_route.py  test_usage_coupon_route.py  test_validate_route.py
tests/integration/api/coupon/v2/: test_add_confirmed.py  test_add_reserved.py  test_remove_reserved.py
tests/unit/: test_coupon.py  test_handler_error.py  test_migrations.py  test_task.py  test_usage_history.py
tests/unit/services/: test_coupon.py  test_storage.py  test_usage_history.py
